@@ -99,6 +99,7 @@
 
 	<p>Please save following RDF content to a file <tt>services.n3</tt> and upload it to your website.</p>
 	<pre>###RDF_CONTENT###</pre>
+	<p><!-- ###LINK_DOWNLOAD### -->Click here<!-- ###LINK_DOWNLOAD### --> to download this file.</p>
 
 	<p>Then edit your homepage and add following line within the HEAD part:</p>
 	<pre>&lt;link id="__ech-published_services" rel="alternate" type="text/n3" href="/services.n3" /&gt;</pre>
